welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
var x = getMondeHauteur()
var y = getMondeLargeur()
var T = new Array[Color](x+1)
	T(1)=getCouleurSol()
	for (i <- 2 to x)
	 {avance()
	 	T(i) = getCouleurSol()}
	 recule(x-1)
	 gauche();avance();droite()
	 for (k <- 1 to y -1)
	 	{val decalage = litMessage().toInt
	 	 for (z <- 1 to x-1)
	 	   { setCouleur(T((z+decalage)% T.length))
	 	   	baisseBrosse();leveBrosse()}
	 	recule(y-1)}	 
}
